# SlotKeeper

./: .env.example  .gitignore  README.md  alembic.ini  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
scripts/: seed_services.py
src/slotkeeper/: app.py  config.py
src/slotkeeper/core/: availability.py  models.py
src/slotkeeper/core/booking/: db_repo.py  hold.py  models.py  repo.py  shared.py
src/slotkeeper/core/notify/: notifier.py
src/slotkeeper/db/: engine.py  models.py  session.py
src/slotkeeper/db/migrations/: env.py
src/slotkeeper/db/migrations/versions/: c3251ce29edb_init_tables.py  d0670a83bbdd_add_services_tables.py
src/slotkeeper/fsm/: states.py
src/slotkeeper/handlers/: admin.py  collect.py  search.py  start.py
src/slotkeeper/ui/: keyboards.py
src/slotkeeper/utils/: validators.py
tests/: test_core_timeslot.py  test_smoke.py
